// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitPreseed golden > golden output: 'encrypted-debian' 1`] = `
"# Preseed generated by linux-generators v0.1.0
d-i debian-installer/locale string en_US.UTF-8
d-i keyboard-configuration/xkb-keymap select us
d-i time/zone string UTC
d-i clock-setup/utc boolean true
d-i netcfg/get_hostname string localhost
d-i netcfg/get_domain string localdomain
d-i netcfg/choose_interface select auto
d-i partman/early_command string debconf-set partman-auto/disk "$(list-devices disk | head -n1)"
d-i partman-auto/method string crypto
d-i partman-auto/choose_recipe select atomic
d-i partman-lvm/device_remove_lvm boolean true
d-i partman-md/device_remove_md boolean true
d-i partman-lvm/confirm boolean true
d-i partman-lvm/confirm_nooverwrite boolean true
d-i partman-partitioning/confirm_write_new_label boolean true
d-i partman/choose_partition select finish
d-i partman/confirm boolean true
d-i partman/confirm_nooverwrite boolean true
d-i partman-partitioning/choose_label select gpt
d-i partman-crypto/passphrase password secret
d-i partman-crypto/passphrase-again password secret
d-i partman-crypto/confirm boolean true
d-i partman-crypto/confirm_nooverwrite boolean true
d-i passwd/root-login boolean false
d-i passwd/make-user boolean true
d-i passwd/username string admin
d-i passwd/user-default-groups string audio cdrom video plugdev netdev sudo
d-i mirror/country string manual
d-i mirror/http/hostname string deb.debian.org
d-i mirror/http/directory string /debian
d-i pkgsel/include string openssh-server sudo
d-i pkgsel/upgrade select none
tasksel tasksel/first multiselect standard
d-i preseed/late_command string sed -i 's/^#\\?PermitRootLogin.*/PermitRootLogin no/' /target/etc/ssh/sshd_config; sed -i 's/^#\\?PasswordAuthentication.*/PasswordAuthentication no/' /target/etc/ssh/sshd_config; in-target env DEBIAN_FRONTEND=noninteractive apt-get install -y ufw; in-target ufw allow ssh; in-target ufw --force enable; in-target systemctl enable myservice
d-i grub-installer/only_debian boolean true
d-i grub-installer/with_other_os boolean true
d-i grub-installer/bootdev string default
d-i finish-install/reboot_in_progress note
"
`;

exports[`emitPreseed golden > golden output: 'minimal-debian' 1`] = `
"# Preseed generated by linux-generators v0.1.0
d-i debian-installer/locale string en_US.UTF-8
d-i keyboard-configuration/xkb-keymap select us
d-i time/zone string UTC
d-i clock-setup/utc boolean true
d-i netcfg/get_hostname string localhost
d-i netcfg/get_domain string localdomain
d-i netcfg/choose_interface select auto
d-i partman/early_command string debconf-set partman-auto/disk "$(list-devices disk | head -n1)"
d-i partman-auto/method string lvm
d-i partman-auto/choose_recipe select atomic
d-i partman-lvm/device_remove_lvm boolean true
d-i partman-md/device_remove_md boolean true
d-i partman-lvm/confirm boolean true
d-i partman-lvm/confirm_nooverwrite boolean true
d-i partman-partitioning/confirm_write_new_label boolean true
d-i partman/choose_partition select finish
d-i partman/confirm boolean true
d-i partman/confirm_nooverwrite boolean true
d-i partman-partitioning/choose_label select gpt
d-i passwd/root-login boolean false
d-i passwd/make-user boolean true
d-i passwd/username string admin
d-i passwd/user-default-groups string audio cdrom video plugdev netdev sudo
d-i mirror/country string manual
d-i mirror/http/hostname string deb.debian.org
d-i mirror/http/directory string /debian
d-i pkgsel/include string openssh-server sudo
d-i pkgsel/upgrade select none
tasksel tasksel/first multiselect standard
d-i preseed/late_command string sed -i 's/^#\\?PermitRootLogin.*/PermitRootLogin no/' /target/etc/ssh/sshd_config; sed -i 's/^#\\?PasswordAuthentication.*/PasswordAuthentication no/' /target/etc/ssh/sshd_config; in-target env DEBIAN_FRONTEND=noninteractive apt-get install -y ufw; in-target ufw allow ssh; in-target ufw --force enable
d-i grub-installer/only_debian boolean true
d-i grub-installer/with_other_os boolean true
d-i grub-installer/bootdev string default
d-i finish-install/reboot_in_progress note
"
`;

exports[`emitPreseed golden > golden output: 'static-debian' 1`] = `
"# Preseed generated by linux-generators v0.1.0
d-i debian-installer/locale string en_US.UTF-8
d-i keyboard-configuration/xkb-keymap select us
d-i time/zone string UTC
d-i clock-setup/utc boolean true
d-i netcfg/get_hostname string web01
d-i netcfg/choose_interface select ens3
d-i netcfg/disable_autoconfig boolean true
d-i netcfg/get_ipaddress string 10.0.0.10
d-i netcfg/get_netmask string 255.255.255.0
d-i netcfg/get_gateway string 10.0.0.1
d-i netcfg/get_nameservers string 10.0.0.2
d-i netcfg/confirm_static boolean true
d-i preseed/early_command string anna-install some-udeb
d-i partman/early_command string debconf-set partman-auto/disk "$(list-devices disk | head -n1)"
d-i partman-auto/method string lvm
d-i partman-auto/choose_recipe select atomic
d-i partman-lvm/device_remove_lvm boolean true
d-i partman-md/device_remove_md boolean true
d-i partman-lvm/confirm boolean true
d-i partman-lvm/confirm_nooverwrite boolean true
d-i partman-partitioning/confirm_write_new_label boolean true
d-i partman/choose_partition select finish
d-i partman/confirm boolean true
d-i partman/confirm_nooverwrite boolean true
d-i partman-partitioning/choose_label select gpt
d-i passwd/root-login boolean false
d-i passwd/make-user boolean true
d-i passwd/username string admin
d-i passwd/user-default-groups string audio cdrom video plugdev netdev sudo
d-i mirror/country string manual
d-i mirror/http/hostname string deb.debian.org
d-i mirror/http/directory string /debian
d-i pkgsel/include string openssh-server sudo
d-i pkgsel/upgrade select none
tasksel tasksel/first multiselect standard
d-i preseed/late_command string mkdir -p /target/home/admin/.ssh; echo "ssh-ed25519 AAAADEBIAN admin@host" >> /target/home/admin/.ssh/authorized_keys; in-target chown -R admin:admin /home/admin/.ssh; chmod 700 /target/home/admin/.ssh; chmod 600 /target/home/admin/.ssh/authorized_keys; sed -i 's/^#\\?PermitRootLogin.*/PermitRootLogin no/' /target/etc/ssh/sshd_config; sed -i 's/^#\\?PasswordAuthentication.*/PasswordAuthentication no/' /target/etc/ssh/sshd_config; in-target env DEBIAN_FRONTEND=noninteractive apt-get install -y ufw; in-target ufw allow ssh; in-target ufw --force enable
d-i grub-installer/only_debian boolean true
d-i grub-installer/with_other_os boolean true
d-i grub-installer/bootdev string default
d-i finish-install/reboot_in_progress note
"
`;
